google vision image and pdf transcript POC added

--- a/Speech/google_speech_POC.ipynb
+++ b/Speech/google_speech_POC.ipynb
@@ -54,14 +54,13 @@
     "from pathlib import Path\n",
     "\n",
     "\n",
-    "# Load JSON key into env var\n",
     "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = '/home/borisg/Python/Kaleidoo/kaleidoo-435715-96fdd3ef71f6.json' \n",
     "\n",
-    "# ***Enter src audio filepaths here***\n",
     "src_path = \"/home/borisg/Python/Kaleidoo/TestingSamples/audio_sample_1.mp3\" \n",
-    "gcs_uri = f'gs://kaleidoo_bucket/audio_sample_2.mp3'   # For files longer that 1 min                      \n",
+    "filename = src_path\n",
     "\n",
-    "dst_path = f\"TestingOutputs/gogole_speech_{Path(src_path).name}_transcript.txt\"\n",
+    "\n",
+    "dst_path = f\"TestingOutputs/gogole_speech_{Path(filename).name}_transcript.txt\"\n",
     "log_path = \"TestingLogs/google_speech_testing_results.txt\"\n",
     "\n",
     "def transcribe_audio(audio_path):\n",
@@ -76,9 +75,9 @@
     "    audio = speech.RecognitionAudio(content=content)\n",
     "\n",
     "    config = speech.RecognitionConfig(\n",
-    "        encoding=speech.RecognitionConfig.AudioEncoding.MP3,  # Change based on your audio format\n",
-    "        sample_rate_hertz=16000,  # Adjust based on your audio file's sample rate\n",
-    "        language_code='he-IL'  # Set the language code (Hebrew in this case)\n",
+    "        encoding=speech.RecognitionConfig.AudioEncoding.MP3, \n",
+    "        sample_rate_hertz=16000,  \n",
+    "        language_code='he-IL' \n",
     "    )\n",
     "\n",
     "    response = client.recognize(config=config, audio=audio)\n",
@@ -89,9 +88,6 @@
     "\n",
     "    print(\"Transcription complete.\")\n",
     "    end_time = time.time()\n",
-    "\n",
-    "    # Set filename for output (local or cloud)\n",
-    "    filename = src_path\n",
     "\n",
     "    print(f\"Time to process - {Path(filename).name}: {end_time-start_time}\\n\")\n",
     "    print('Confidence: {}\\n\\n'.format(alternative.confidence))\n",
